# fishing-backend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/fishing/: asgi.py  settings.py  urls.py  wsgi.py
src/fishing/settings/: __init__.py  base.py  dev.py  prod.py
src/frontend/: urls.py  views.py
src/rest/: admin.py  fields.py  import_products.py  models.py  schema.py  serializers.py  urls.py  views.py  widgets.py
src/rest/migrations/: 0001_initial.py  0002_allow_nullable_blank.py  0003_fix_models_meta_attrs.py
src/rest/static/rest/: style.css  widgets.js
src/rest/templates/admin/rest/product/: change_list.html  import.html
src/rest/templates/rest/: pictures_inline.html  product_properties_inline.html
src/rest/templates/rest/widgets/: attrs_without_id.html  image_preview.html  one_image_preview.html  price_milli_cents.html
tests/: test_fishing.py
