[tool.poetry]
name = "fishing"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zuev <zuev08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
djangorestframework = "^3.13"
Pillow = "^9.2"
mysqlclient = [
    { version = "^2.1", platform = 'linux' },
]
django-cleanup = "^6.0"
graphene-django = { git = "https://github.com/graphql-python/graphene-django.git", rev = "f6ec068" }
graphql-core = "<3.2.0"
django-filter = "22.1"
psycopg2 = [
    { version = "^2.9.3", platform = 'linux' },
]

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
